# chibi-tech

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build  build.bat  configure  configure.bat  meson.build  run  run.bat
ct-apps/ct-render-app/ct-app/: ct-render-demo-entry.cpp  meson.build
ct-core/: defines.h  meson.build  types.h
ct-core/containers/: darray.h  darray.inl  expected.h  free_list.cpp  free_list.h  hashtable.cpp  hashtable.h  optional.h  strings.cpp  strings.h
ct-core/debug/: ct_assert.h
ct-core/math/: chibi-float3.cpp  chibi-float3.h  chibi-math.cpp  chibi-math.h
ct-core/memory/: ct_memory.cpp  ct_memory.h
ct-core/memory/allocators/: allocator.h  dynamic_allocator.cpp  dynamic_allocator.h
ct-core/pch/: pch.h
ct-core/platform/: ct_platform.h  platform_nix.cpp  platform_wayland.cpp  platform_win32.cpp
ct-engine/: CMakeLists.txt
ct-engine/ct-bootstrap/: CMakeLists.txt  chibi-tech.c
ct-engine/ct-core/: CMakeLists.txt  defines.h  types.h
ct-engine/ct-core/containers/: hashtable.c  hashtable.h  strings.c  strings.h
ct-engine/ct-core/debug/: ct-assert.h
ct-engine/ct-core/memory/: ct-memory.c  ct-memory.h
ct-engine/ct-core/memory/allocators/: allocator.h  dynamic-allocator.c  dynamic-allocator.h
ct-engine/ct-core/pch/: pch.h
ct-engine/ct-core/platform/: ct-platform-nix.c  ct-platform-win32.c  ct-platform.h
ct-engine/ct-core/plugin-api/: plugin-api.h
ct-engine/ct-plugins/: CMakeLists.txt
ct-engine/ct-plugins/plugin-window/: CMakeLists.txt  window-plugin.c  window-plugin.h
ct-engine/ct-plugins/plugin-window/CMake/: glfw.cmake
ct-engine/ct-runtime/: CMakeLists.txt  entry.h
ct-engine/ct-runtime/CMake/: flecs.cmake
ct-engine/ct-runtime/application/: application-config.h  application.h
ct-engine/ct-runtime/core/: engine.c  engine.h
ct-plugins/plugin-window/: window_win32.cpp
ct-render-app/: meson.build
ct-runtime/: entry.h  meson.build
ct-runtime/application/: application.h  application_config.h
ct-runtime/core/: engine.cpp  engine.h
scripts/: build  configure  run
